--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
-	font: 1em/1.25em Helvetica, Arial, sans-serif;
-	background-color: #d2d7dd;
-	color: #a0a0a0;
+	font: 1em/1.25em 'Arial', 'Helvetica Neue', Helvetica, sans-serif;;
+	background: url('images/crisp_paper_ruffles.png') repeat #d2d7dd;
+	color: #777;
 }
 
 header {
   
-	border-bottom: 1px solid #9a9a9a;
+	border-bottom: 1px solid #ccc;
 	position:fixed;
 	top:0;
 	background: #fff;
@@ -25,7 +25,7 @@ nav ul {
 
 nav ul li {
 	display: inline-block;
-	border-right: 1px solid #9a9a9a;
+	border-right: 1px solid #777;
 	padding: 0 0.25em;
 	line-height: 75%;
 }
@@ -35,7 +35,7 @@ nav ul li:last-child{
 }
 
 nav ul li a {
-	color: #9a9a9a;
+	color: #777;
 	margin: 0 0.5em;
 	text-decoration: none;
 	font-size: 110%;
@@ -47,8 +47,9 @@ main {
 
 footer {
 	margin-top: 7em;
-	border-top: 5px solid #42d8dd;
-	background-color: #5B5B5B;
+	border-top: 5px solid #4aaaa5;
+	background-color: #666;
+	height:100%;
 }
 
 p {
@@ -57,19 +58,17 @@ p {
 }
 
 h1, h2 {
-	font: 175%/225% 'Tinos', serif;
-	letter-spacing: 0.04em;
+	font: bold 175%/225% 'Georgia', Times, Times New Roman, serif;
 	margin: 1em 0;
 	border-bottom: 1px solid #ccc;
-	color: #42d8dd;
+	color: #4aaaa5;
 }
 
 p.title {
-	font: 175%/225% 'Tinos', serif;
-	letter-spacing: 0.04em;
+	font: bold 175%/225% 'Georgia', Times, Times New Roman, serif;
 	display: block;
 	float:left;
-	background-color: #42d8dd;
+	background-color: #4aaaa5;
 	padding:0.5em 1.25em;
 	margin-bottom:0;
 	margin-left:-1.25em;
@@ -86,8 +85,9 @@ section {
 
 main section {
 	background-color: #fff;
-	padding-top: 2em;
+	padding-top: 1em;
 	padding-bottom: 2em;
+	border:1px solid #ddd;
 }
 
 .profile-photo {
